[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcdet-tools"
version = "0.1.0"
description = "Helper scripts for OpenPCDet"
requires-python = ">=3.8"
dependencies = ["pcdet", "torch", "numpy"]

[tool.setuptools.packages.find]
where = ["."]
namespaces = true

include = [
    "train_utils*",
    "eval_utils*"
]

exclude = ["*"]